// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FabricAnalyticsListeners /> FabricAnalyticsListener should render a FabricElementsListener 1`] = `
.emotion-1 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: none;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  width: auto;
  max-width: 100%;
  position: relative;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-column-gap: var(--ds-space-050, 4px);
  column-gap: var(--ds-space-050, 4px);
  border-radius: var(--ds-border-radius-100, 3px);
  border-width: var(--ds-border-width-0, 0px);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 2.2857142857142856em;
  font: var(--ds-font-body, normal 400 14px/20px ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Ubuntu, system-ui, "Helvetica Neue", sans-serif);
  font-weight: var(--ds-font-weight-medium, 500);
  padding-block: var(--ds-space-075, 6px);
  -webkit-padding-end: var(--ds-space-150, 12px);
  padding-inline-end: var(--ds-space-150, 12px);
  -webkit-padding-start: var(--ds-space-150, 12px);
  padding-inline-start: var(--ds-space-150, 12px);
  text-align: center;
  -webkit-transition: background 0.1s ease-out;
  transition: background 0.1s ease-out;
  vertical-align: middle;
  background: var(--ds-background-neutral, rgba(9, 30, 66, 0.04));
  color: var(--ds-text, #42526E);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus,
.emotion-1:focus-visible {
  outline-color: var(--ds-border-focused, #2684FF);
  outline-offset: var(--ds-space-025, 2px);
  outline-style: solid;
  outline-width: var(--ds-border-width-outline, 2px);
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (forced-colors: active),screen and (-ms-high-contrast: active) {
  .emotion-1:focus-visible {
    outline: 1px solid;
  }
}

.emotion-1::after {
  border-radius: inherit;
  inset: var(--ds-space-0, 0px);
  border-style: solid;
  border-width: var(--ds-border-width, 1px);
  pointer-events: none;
  position: absolute;
}

.emotion-1:visited {
  color: var(--ds-text, #42526E);
}

.emotion-1:hover {
  background: var(--ds-background-neutral-hovered, #091e4214);
  color: var(--ds-text, #42526E);
}

.emotion-1:active {
  background: var(--ds-background-neutral-pressed, #B3D4FF);
  color: var(--ds-text, #0052CC);
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: none;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
  <div
    id="dummy"
  >
    <button
      class=" emotion-1"
      type="button"
    >
      <span
        class=" emotion-0"
      >
        fabric-elements
      </span>
    </button>
  </div>
</div>
`;

exports[`<FabricAnalyticsListeners /> FabricAnalyticsListener should render a NavigationListener 1`] = `
.emotion-1 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: none;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  width: auto;
  max-width: 100%;
  position: relative;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-column-gap: var(--ds-space-050, 4px);
  column-gap: var(--ds-space-050, 4px);
  border-radius: var(--ds-border-radius-100, 3px);
  border-width: var(--ds-border-width-0, 0px);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 2.2857142857142856em;
  font: var(--ds-font-body, normal 400 14px/20px ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Ubuntu, system-ui, "Helvetica Neue", sans-serif);
  font-weight: var(--ds-font-weight-medium, 500);
  padding-block: var(--ds-space-075, 6px);
  -webkit-padding-end: var(--ds-space-150, 12px);
  padding-inline-end: var(--ds-space-150, 12px);
  -webkit-padding-start: var(--ds-space-150, 12px);
  padding-inline-start: var(--ds-space-150, 12px);
  text-align: center;
  -webkit-transition: background 0.1s ease-out;
  transition: background 0.1s ease-out;
  vertical-align: middle;
  background: var(--ds-background-neutral, rgba(9, 30, 66, 0.04));
  color: var(--ds-text, #42526E);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus,
.emotion-1:focus-visible {
  outline-color: var(--ds-border-focused, #2684FF);
  outline-offset: var(--ds-space-025, 2px);
  outline-style: solid;
  outline-width: var(--ds-border-width-outline, 2px);
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (forced-colors: active),screen and (-ms-high-contrast: active) {
  .emotion-1:focus-visible {
    outline: 1px solid;
  }
}

.emotion-1::after {
  border-radius: inherit;
  inset: var(--ds-space-0, 0px);
  border-style: solid;
  border-width: var(--ds-border-width, 1px);
  pointer-events: none;
  position: absolute;
}

.emotion-1:visited {
  color: var(--ds-text, #42526E);
}

.emotion-1:hover {
  background: var(--ds-background-neutral-hovered, #091e4214);
  color: var(--ds-text, #42526E);
}

.emotion-1:active {
  background: var(--ds-background-neutral-pressed, #B3D4FF);
  color: var(--ds-text, #0052CC);
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: none;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
  <div
    id="dummy"
  >
    <button
      class=" emotion-1"
      type="button"
    >
      <span
        class=" emotion-0"
      >
        navigation
      </span>
    </button>
  </div>
</div>
`;

exports[`<FabricAnalyticsListeners /> FabricAnalyticsListener should render a PostOfficeListener 1`] = `
.emotion-1 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: none;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  width: auto;
  max-width: 100%;
  position: relative;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-column-gap: var(--ds-space-050, 4px);
  column-gap: var(--ds-space-050, 4px);
  border-radius: var(--ds-border-radius-100, 3px);
  border-width: var(--ds-border-width-0, 0px);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 2.2857142857142856em;
  font: var(--ds-font-body, normal 400 14px/20px ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Ubuntu, system-ui, "Helvetica Neue", sans-serif);
  font-weight: var(--ds-font-weight-medium, 500);
  padding-block: var(--ds-space-075, 6px);
  -webkit-padding-end: var(--ds-space-150, 12px);
  padding-inline-end: var(--ds-space-150, 12px);
  -webkit-padding-start: var(--ds-space-150, 12px);
  padding-inline-start: var(--ds-space-150, 12px);
  text-align: center;
  -webkit-transition: background 0.1s ease-out;
  transition: background 0.1s ease-out;
  vertical-align: middle;
  background: var(--ds-background-neutral, rgba(9, 30, 66, 0.04));
  color: var(--ds-text, #42526E);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus,
.emotion-1:focus-visible {
  outline-color: var(--ds-border-focused, #2684FF);
  outline-offset: var(--ds-space-025, 2px);
  outline-style: solid;
  outline-width: var(--ds-border-width-outline, 2px);
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (forced-colors: active),screen and (-ms-high-contrast: active) {
  .emotion-1:focus-visible {
    outline: 1px solid;
  }
}

.emotion-1::after {
  border-radius: inherit;
  inset: var(--ds-space-0, 0px);
  border-style: solid;
  border-width: var(--ds-border-width, 1px);
  pointer-events: none;
  position: absolute;
}

.emotion-1:visited {
  color: var(--ds-text, #42526E);
}

.emotion-1:hover {
  background: var(--ds-background-neutral-hovered, #091e4214);
  color: var(--ds-text, #42526E);
}

.emotion-1:active {
  background: var(--ds-background-neutral-pressed, #B3D4FF);
  color: var(--ds-text, #0052CC);
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: none;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
  <div
    id="dummy"
  >
    <button
      class=" emotion-1"
      type="button"
    >
      <span
        class=" emotion-0"
      >
        postOffice
      </span>
    </button>
  </div>
</div>
`;

exports[`<FabricAnalyticsListeners /> FabricAnalyticsListener should render an AtlaskitListener 1`] = `
.emotion-1 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: none;
  cursor: pointer;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  box-sizing: border-box;
  width: auto;
  max-width: 100%;
  position: relative;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-column-gap: var(--ds-space-050, 4px);
  column-gap: var(--ds-space-050, 4px);
  border-radius: var(--ds-border-radius-100, 3px);
  border-width: var(--ds-border-width-0, 0px);
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  height: 2.2857142857142856em;
  font: var(--ds-font-body, normal 400 14px/20px ui-sans-serif, -apple-system, BlinkMacSystemFont, "Segoe UI", Ubuntu, system-ui, "Helvetica Neue", sans-serif);
  font-weight: var(--ds-font-weight-medium, 500);
  padding-block: var(--ds-space-075, 6px);
  -webkit-padding-end: var(--ds-space-150, 12px);
  padding-inline-end: var(--ds-space-150, 12px);
  -webkit-padding-start: var(--ds-space-150, 12px);
  padding-inline-start: var(--ds-space-150, 12px);
  text-align: center;
  -webkit-transition: background 0.1s ease-out;
  transition: background 0.1s ease-out;
  vertical-align: middle;
  background: var(--ds-background-neutral, rgba(9, 30, 66, 0.04));
  color: var(--ds-text, #42526E);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus,
.emotion-1:focus-visible {
  outline-color: var(--ds-border-focused, #2684FF);
  outline-offset: var(--ds-space-025, 2px);
  outline-style: solid;
  outline-width: var(--ds-border-width-outline, 2px);
}

.emotion-1:focus:not(:focus-visible) {
  outline: none;
}

@media screen and (forced-colors: active),screen and (-ms-high-contrast: active) {
  .emotion-1:focus-visible {
    outline: 1px solid;
  }
}

.emotion-1::after {
  border-radius: inherit;
  inset: var(--ds-space-0, 0px);
  border-style: solid;
  border-width: var(--ds-border-width, 1px);
  pointer-events: none;
  position: absolute;
}

.emotion-1:visited {
  color: var(--ds-text, #42526E);
}

.emotion-1:hover {
  background: var(--ds-background-neutral-hovered, #091e4214);
  color: var(--ds-text, #42526E);
}

.emotion-1:active {
  background: var(--ds-background-neutral-pressed, #B3D4FF);
  color: var(--ds-text, #0052CC);
}

.emotion-1:hover {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-1:focus {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-0 {
  box-sizing: border-box;
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  border: none;
  -webkit-transition: opacity 0.3s;
  transition: opacity 0.3s;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

<div>
  <div
    id="dummy"
  >
    <button
      class=" emotion-1"
      type="button"
    >
      <span
        class=" emotion-0"
      >
        atlaskit
      </span>
    </button>
  </div>
</div>
`;
